[hotfix] Fix compiliation for java 11 (#28225)